Git Tests/force-app/main/default/default/objects/Reserva__c/Reserva__c.object-meta.xml
<CustomObject>
    <label>Reserva</label>
    <nameField>
        <displayFormat>RE-{000000}</displayFormat>
        <label>Nome da reserva</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reservas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>