Git Tests/force-app/main/default/default/objects/Reserva__c/fields/CodigoCD__c.field-meta.xml
<CustomField>
    <fullName>CodigoCD__c</fullName>
    <label>Código do CD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>