Git Tests/force-app/main/default/default/objects/Reserva__c/fields/CodigoReserva__c.field-meta.xml
<CustomField>
    <fullName>CodigoReserva__c</fullName>
    <externalId>true</externalId>
    <label>Código da reserva</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>