Git Tests/force-app/main/default/default/objects/Reserva__c/fields/CodigoReservaProtheus__c.field-meta.xml
<CustomField>
    <fullName>CodigoReservaProtheus__c</fullName>
    <formula>RIGHT(LEFT(CodigoReserva__c,11),6)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código reserva Protheus</label>
    <type>Text</type>
</CustomField>