Git Tests/force-app/main/default/default/objects/Reserva__c/fields/CodigoSaldoFinanceiro__c.field-meta.xml
<CustomField>
    <fullName>CodigoSaldoFinanceiro__c</fullName>
    <description>Campo para receber o código do saldo financeiro que será utilizado para consulta.</description>
    <inlineHelpText>Campo para receber o código do saldo financeiro que será utilizado para consulta.</inlineHelpText>
    <label>Código do saldo financeiro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>