Git Tests/force-app/main/default/default/objects/Reserva__c/fields/DataUltimaMovimentacao__c.field-meta.xml
<CustomField>
    <fullName>DataUltimaMovimentacao__c</fullName>
    <label>Data última movimentação</label>
    <summarizedField>ProdutoReserva__c.DataUltimaMovimentacao__c</summarizedField>
    <summaryForeignKey>ProdutoReserva__c.Reserva__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>