Git Tests/force-app/main/default/default/objects/Reserva__c/fields/Descricao__c.field-meta.xml
<CustomField>
    <fullName>Descricao__c</fullName>
    <label>Descrição</label>
    <length>25</length>
    <type>Text</type>
</CustomField>