Git Tests/force-app/main/default/default/objects/Reserva__c/fields/DiasVencimento__c.field-meta.xml
<CustomField>
    <fullName>DiasVencimento__c</fullName>
    <formula>ABS(

CASE(MOD (datevalue(InicioReserva__c)- DATE(1985,6,24),7),
0 , CASE( MOD( Datevalue( FimReserva__c) - datevalue(InicioReserva__c)
,7),1,2,2,3,3,4,4,5,5,5,6,5,1),
1 , CASE( MOD( Datevalue( FimReserva__c) - datevalue(InicioReserva__c)
,7),1,2,2,3,3,4,4,4,5,4,6,5,1),
2 , CASE( MOD( Datevalue( FimReserva__c) - datevalue(InicioReserva__c)
,7),1,2,2,3,3,3,4,3,5,4,6,5,1),
3 , CASE( MOD( Datevalue( FimReserva__c) - datevalue(InicioReserva__c)
,7),1,2,2,2,3,2,4,3,5,4,6,5,1),
4 , CASE( MOD( Datevalue( FimReserva__c) - datevalue(InicioReserva__c)
,7),1,1,2,1,3,2,4,3,5,4,6,5,1),
5 , CASE( MOD( Datevalue( FimReserva__c) - datevalue(InicioReserva__c)
,7),1,0,2,1,3,2,4,3,5,4,6,5,0),
6 , CASE( MOD( Datevalue( FimReserva__c) - datevalue(InicioReserva__c)
,7),1,1,2,2,3,3,4,4,5,5,6,5,0),999)
+
(FLOOR((( FimReserva__c) - ( InicioReserva__c) )/7)*5)-1 +
( FimReserva__c - InicioReserva__c) - (datevalue( FimReserva__c) -
datevalue(InicioReserva__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dias para vencimento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>