Git Tests/force-app/main/default/default/objects/Reserva__c/fields/ErroIntegracao__c.field-meta.xml
<CustomField>
    <fullName>ErroIntegracao__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Erro de integração</label>
    <type>Checkbox</type>
</CustomField>