Git Tests/force-app/main/default/default/objects/Reserva__c/fields/FimReserva__c.field-meta.xml
<CustomField>
    <fullName>FimReserva__c</fullName>
    <label>Fim da reserva</label>
    <type>DateTime</type>
</CustomField>