Git Tests/force-app/main/default/default/objects/Reserva__c/fields/InicioReserva__c.field-meta.xml
<CustomField>
    <fullName>InicioReserva__c</fullName>
    <label>Início da reserva</label>
    <type>DateTime</type>
</CustomField>