Git Tests/force-app/main/default/default/objects/Reserva__c/fields/LimiteFinanceiro__c.field-meta.xml
<CustomField>
    <fullName>LimiteFinanceiro__c</fullName>
    <defaultValue>5000000</defaultValue>
    <label>Limite financeiro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>