Git Tests/force-app/main/default/default/objects/Reserva__c/fields/MensagemErroIntegracao__c.field-meta.xml
<CustomField>
    <fullName>MensagemErroIntegracao__c</fullName>
    <label>Mensagem de erro (integração)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>