Git Tests/force-app/main/default/default/objects/Reserva__c/fields/QuantidadeDestinatarios__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeDestinatarios__c</fullName>
    <label>Quantidade de destinatários</label>
    <summaryForeignKey>DestinatarioReserva__c.Reserva__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>