Git Tests/force-app/main/default/default/objects/Reserva__c/fields/RegioesSaldoFinanceiro__c.field-meta.xml
<CustomField>
    <fullName>RegioesSaldoFinanceiro__c</fullName>
    <description>Regiões do saldo financeiro selecionado ao criar a reserva.</description>
    <inlineHelpText>Regiões do saldo financeiro selecionado ao criar a reserva.</inlineHelpText>
    <label>Regiões do saldo financeiro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>