Git Tests/force-app/main/default/default/objects/Reserva__c/fields/SaldoFinanceiroConsumido__c.field-meta.xml
<CustomField>
    <fullName>SaldoFinanceiroConsumido__c</fullName>
    <label>Saldo financeiro consumido</label>
    <summarizedField>ProdutoReserva__c.ValorTotal__c</summarizedField>
    <summaryForeignKey>ProdutoReserva__c.Reserva__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>