Git Tests/force-app/main/default/default/objects/Reserva__c/fields/SaldoFinanceiroDisponivel__c.field-meta.xml
<CustomField>
    <fullName>SaldoFinanceiroDisponivel__c</fullName>
    <formula>LimiteFinanceiro__c -  SaldoFinanceiroConsumido__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saldo financeiro disponível</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>