Git Tests/force-app/main/default/default/objects/Reserva__c/fields/StatusReserva__c.field-meta.xml
<CustomField>
    <fullName>StatusReserva__c</fullName>
    <label>Status da reserva</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ativa</fullName>
                <default>true</default>
                <label>Ativa</label>
            </value>
            <value>
                <fullName>Expirada</fullName>
            </value>
            <value>
                <fullName>Aguardando aprovação</fullName>
                <isActive>false</isActive>
                <label>Aguardando aprovação</label>
            </value>
            <value>
                <fullName>Aguardando envio de exclusão</fullName>
                <isActive>false</isActive>
                <label>Aguardando envio de exclusão</label>
            </value>
            <value>
                <fullName>Aguardando integração</fullName>
                <isActive>false</isActive>
                <label>Aguardando integração</label>
            </value>
            <value>
                <fullName>Aprovada</fullName>
                <isActive>false</isActive>
                <label>Aprovada</label>
            </value>
            <value>
                <fullName>Cancelada</fullName>
                <isActive>false</isActive>
                <label>Cancelada</label>
            </value>
            <value>
                <fullName>Em digitação</fullName>
                <isActive>false</isActive>
                <label>Em digitação</label>
            </value>
            <value>
                <fullName>Erro de integração</fullName>
                <isActive>false</isActive>
                <label>Erro de integração</label>
            </value>
            <value>
                <fullName>Integrado</fullName>
                <isActive>false</isActive>
                <label>Integrado</label>
            </value>
            <value>
                <fullName>Rejeitada</fullName>
                <isActive>false</isActive>
                <label>Rejeitada</label>
            </value>
            <value>
                <fullName>Vencida</fullName>
                <isActive>false</isActive>
                <label>Vencida</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>