Git Tests/force-app/main/default/default/objects/Reserva__c/fields/UsuarioSolicitante__c.field-meta.xml
<CustomField>
    <fullName>UsuarioSolicitante__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usuário solicitante</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Reservas</relationshipName>
    <type>Lookup</type>
</CustomField>