Git Tests/force-app/main/default/default/objects/Reserva__c/recordTypes/ReservaCliente.recordType-meta.xml
<RecordType>
    <fullName>ReservaCliente</fullName>
    <active>true</active>
    <label>Reserva de cliente</label>
</RecordType>