Git Tests/force-app/main/default/default/objects/Reserva__c/recordTypes/ReservaRegional.recordType-meta.xml
<RecordType>
    <fullName>ReservaRegional</fullName>
    <active>true</active>
    <label>Reserva regional</label>
</RecordType>