Git Tests/force-app/main/default/default/objects/Reserva__c/listViews/Todas_as_reservas.listView-meta.xml
<ListView>
    <fullName>Todas_as_reservas</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>CodigoReservaProtheus__c</columns>
    <columns>Descricao__c</columns>
    <columns>CentroDistribuicao__c</columns>
    <columns>CodigoCD__c</columns>
    <columns>InicioReserva__c</columns>
    <columns>FimReserva__c</columns>
    <columns>StatusReserva__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Todas as reservas</label>
</ListView>